Taxonomies now exist for all pages

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -41,9 +41,9 @@
       </ul>
     </nav>
     {% endblock navigation %}
-    <section class="W(90%) W(60%)--md M(a) Ta(c) Ta(s)--md">
-    {% block content %}
-    {% endblock content %}
+    <section class="W(90%) W(60%)--md M(a) Ta(s)">
+      {% block content %}
+      {% endblock content %}
     </section>
     {% block footer %}
     <footer>
