[html] navigation bar is now horizontal

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -32,10 +32,10 @@
       </div>
       <nav class="Ta(c)">
         <ul class="D(i) List(n) P(0)">
-          <li><a class="Td(n) C(action):a C(action)" href="https://twitter.com/LukeCollier4">twitter</a></li>
-          <li><a class="Td(n) C(action):a C(action)" href="https://github.com/lukecollier">github</a></li>
-          <li><a class="Td(n) C(action):a C(action)" href="mailto: contact@lukecollier.dev">contact@lukecollier.dev</a></li>
-          <li><a class="Td(n) C(action):a C(action)" href="https://github.com/lukecollier/lukecollier.dev">source</a></li>
+          <li class="D(ib)"><a class="Td(n) C(action):a C(action)" href="https://twitter.com/LukeCollier4">twitter</a></li>
+          <li class="D(ib)"><a class="Td(n) C(action):a C(action)" href="https://github.com/lukecollier">github</a></li>
+          <li class="D(ib)"><a class="Td(n) C(action):a C(action)" href="mailto: contact@lukecollier.dev">contact@lukecollier.dev</a></li>
+          <li class="D(ib)"><a class="Td(n) C(action):a C(action)" href="https://github.com/lukecollier/lukecollier.dev">source</a></li>
         </ul>
       </nav>
     </header>
