--- a/templates/index.html
+++ b/templates/index.html
@@ -3,13 +3,13 @@
 {% block content %}
 {% set blog = get_section(path="blog/_index.md") %}
 {{ section.content | safe }}
-<h2>Blog</h2>
-<ul>
-{% for page in blog.pages | sort(attribute="date") | reverse %}
-<li>
-  <a href="{{ page.permalink }}">{{ page.date ~ " / " ~ page.title }}</a>
-  <p>{{ page.summary | safe }}</p>
-</li>
-{% endfor %}
+<h2>Latest</h2>
+<ul class="P(0) List(n)">
+    {% for page in blog.pages | sort(attribute="date") | reverse | slice(start=0, end=5) %}
+    <li>
+        <a href="{{ page.permalink }}">{{ page.date ~ " / " ~ page.title }}</a>
+        <p>{{ page.summary | safe }}</p>
+    </li>
+    {% endfor %}
 </ul>
 {% endblock content %}
