--- a/templates/_base.html
+++ b/templates/_base.html
@@ -15,7 +15,7 @@
         <meta name="author" content="{{ config.extra.name }}">
         <meta name="keywords" content="tags">
         <meta name="description" content="">
-        <title>{{ config.extra.title }}{% block title %}{% endblock title %}</title>
+        <title>{{ config.extra.title }}_{% block title %}{% endblock title %}</title>
         <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet"> 
         <link href="/normalize.css" rel="stylesheet" type="text/css">
         <link href="/atomic.css" rel="stylesheet" type="text/css">
