--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 {% set blog = get_section(path="blog/_index.md") %}
 {{ section.content | safe }}
-<h2>Latest Blog</h2>
+<h2>Latest Post</h2>
 <ul class="P(0) List(n)">
     {% for page in blog.pages | sort(attribute="date") | reverse | slice(start=0, end=5) %}
     <li>
