[website] improved look & feel and updated the 404 page!

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -26,7 +26,7 @@
         <div class="Mih(100vh) Fxg(0) Fxs(1) Fx(a) D(f) Fxf(c) H(100%) M(a) Ta(s)">
             {% block header %}
             {% block social %}
-            <nav class="Fxg(0) Fxs(1) Fx(a) Ta(c)">
+            <nav class="Fxg(0) Bg(secondary) Fxs(1) Fx(a) Ta(c)">
                 <ul class="D(i) List(n) P(0)">
                     <li class="D(ib)"><a class="Td(n) C(action):a C(action)" href="https://twitter.com/climbingcoding1">twitter</a></li>
                     <li class="D(ib)"><a class="Td(n) C(action):a C(action)" href="https://github.com/lukecollier">github</a></li>
@@ -42,7 +42,7 @@
                 </div>
             </header>
             {% block navigation %}
-            <nav class="Fxg(0) Fxs(1) Fx(a) Ta(c)">
+            <nav class="Bg(secondary) Fxg(0) Fxs(1) Fx(a) Ta(c)">
                 <ul class="D(i) List(n) P(0)">
                     <li class="D(ib)">
                         <a class="Td(n) C(action):a C(action)" href="{{ config.base_url }}">about</a>
@@ -60,7 +60,7 @@
                 {% endblock content %}
             </section>
             {% block footer %}
-            <footer class="Fxg(0) Fxs(1) Fx(a) Ta(c) C(white) Bgc(primary)">
+            <footer class="Fxg(0) Fxs(1) Fx(a) Ta(c) C(white) Bg(secondary)">
                 © 2020 Luke Collier.
             </footer>
           {% endblock footer %}
