feat: Added code block
note: updated cv

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,14 @@
 import MainLayout from "../layouts/MainLayout.astro"
 ---
 
-<MainLayout title="Badly Typed" description="Come with me fellow type astronaut, adventure awaits!" type="website">
-  <div>
-    <h1>Euston, we have liftoff!</h1>
-    <p>Welcome type astronaut!</p>
+<MainLayout title="Poorly Typed" description="Come with me fellow type astronaut, adventure awaits!" type="website">
+  <div class="container">
+    <div class="card-body bg-primary">
+      <h2 class="card-title">Luke Collier</h2>
+      <p>Senior Software Engineer</p>
+      <div class="card-actions justify-end">
+        <button class="btn btn-primary">Follow</button>
+      </div>
+    </div>
   </div>
 </MainLayout>
