--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -4,6 +4,7 @@ import "../base.css";
 
 import {defaultImageURL} from "./constants.ts"
 import Nav from "../components/Nav.astro"
+import Footer from "../components/Footer.astro"
 
 export interface Props {
   title: string;
@@ -39,5 +40,6 @@ const joinedTags = tags.join(",");
     <Nav title={title}>
       <slot/>
     </Nav>
+    <Footer/>
     </body>
 </html>
