--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -2,9 +2,9 @@
 // https://docs.astro.build/en/guides/integrations-guide/tailwind/#configapplybasestyles
 import "../base.css";
 
-import {defaultImageURL} from "./constants.ts"
-import Nav from "../components/Nav.astro"
-import Footer from "../components/Footer.astro"
+import { defaultImageURL } from "./constants.ts";
+import Nav from "../components/Nav.astro";
+import Footer from "../components/Footer.astro";
 
 export interface Props {
   title: string;
@@ -12,34 +12,41 @@ export interface Props {
   author?: string;
   tags?: string[];
   type?: "website" | "article";
-};
+}
 
-const canonicalURL = new URL(Astro.url.pathname, !Astro.site ? "https://localhost" : Astro.site);
-const { title, description, author = "Luke Collier", tags = [], type = "website", imageURL } = Astro.props as Props;
+const canonicalURL = new URL(
+  Astro.url.pathname,
+  !Astro.site ? "https://localhost" : Astro.site
+);
+const {
+  title,
+  description,
+  author = "Luke Collier",
+  tags = [],
+  type = "website",
+  imageURL,
+} = Astro.props as Props;
 
 const joinedTags = tags.join(",");
 ---
 
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta property="og:type" content={type} />
-        <meta property="og:url" content={canonicalURL}/>
-        <meta property="og:title" content={title}/>
-        <meta property="og:description" content={description}/>
-        <meta property="og:image" content={imageURL}/>
-        <meta property="og:locale" content="en_GB"/>
-        <meta charset="utf-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="author" content={author}>
-        <meta name="keywords" content={joinedTags}>
-        <meta name="description" content={description}>
-        <title>{title}</title>
-    </head>
-    <body>
-    <Nav title={title}>
-      <slot/>
-    </Nav>
-    <Footer/>
-    </body>
+  <head>
+    <meta property="og:type" content={type} />
+    <meta property="og:url" content={canonicalURL} />
+    <meta property="og:title" content={title} />
+    <meta property="og:description" content={description} />
+    <meta property="og:image" content={imageURL} />
+    <meta property="og:locale" content="en_GB" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content={author} />
+    <meta name="keywords" content={joinedTags} />
+    <meta name="description" content={description} />
+    <title>{title}</title>
+  </head>
+  <body>
+    <slot />
+  </body>
 </html>
